--- a/src/Components/ProductItem/ProductItem.module.css
+++ b/src/Components/ProductItem/ProductItem.module.css
@@ -1,6 +1,7 @@
 /* styles item */
 
 .item{
+    box-sizing: border-box;
     display: flex;
     flex-direction: column;
     color: black;
